# tenbagger-lab

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: weekly.yml  weekly_research.yml
spec/: deep_rules.md  quick_rules.md
src/tech_pipeline/: __init__.py  analyst_a_quick.py  analyst_b_deep.py  cli.py  config.py  contract.py  data_sources.py  macro.py  pipeline.py  pm.py  reporting.py  rules.py  verifier.py
tests/: test_contract.py  test_pm_quick.py  test_rules.py
